Light casts shadow when use_shadow unchecked #43788

Closed
opened 2015-02-23 15:54:10 +01:00 by Andrey · 9 comments

System Information
Ubuntu 14.10 x64, ATI Radeon HD 4850, Gallium

Blender Version
2.73a bbf09d9

Short description of error
When I switch the point light in the default scene to the spot or sun, then it casts shadow, however use_shadow is unchecked

Exact steps for others to reproduce the error

  • load default scene
  • switch to the "Blender game" render
  • switch viewport shading to "Material"
  • switch default Point light to "Spot" or "Sun"
  • add plane to see shadow and look at the "use_shadow" option.

untitled.blend

**System Information** Ubuntu 14.10 x64, ATI Radeon HD 4850, Gallium **Blender Version** 2.73a bbf09d9 **Short description of error** When I switch the point light in the default scene to the spot or sun, then it casts shadow, however use_shadow is unchecked **Exact steps for others to reproduce the error** - load default scene - switch to the "Blender game" render - switch viewport shading to "Material" - switch default Point light to "Spot" or "Sun" - add plane to see shadow and look at the "use_shadow" option. [untitled.blend](https://archive.blender.org/developer/F145435/untitled.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @09th

Added subscriber: @09th
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm the wrong behaviour. To point out it seems that use_shadow active in light type Sun affects to the existence or not of shadows with spot light (regardless of whether use_shadow in spot light is active or not)

I confirm the wrong behaviour. To point out it seems that use_shadow active in light type Sun affects to the existence or not of shadows with spot light (regardless of whether use_shadow in spot light is active or not)
Jorge Bernal self-assigned this 2015-02-24 11:41:25 +01:00

Added subscriber: @zeauro

Added subscriber: @zeauro

use_shadows should not be sensitive to lamp type.
Disabling shadow with Spot UI is also disabling it for Sun type when you switch UI to Sun after.

Problem is that UI does not follow shadow enabling for Spot type when it was done with Sun type UI .

use_shadows should not be sensitive to lamp type. Disabling shadow with Spot UI is also disabling it for Sun type when you switch UI to Sun after. Problem is that UI does not follow shadow enabling for Spot type when it was done with Sun type UI .
Member

I have a solution (check http://wiki.blender.org/index.php/User:Lordloki/TODO#https:.2F.2Fdeveloper.blender.org.2FT43788). When I have some time in the next days I will commit it.

I have a solution (check http://wiki.blender.org/index.php/User:Lordloki/TODO#https:.2F.2Fdeveloper.blender.org.2FT43788). When I have some time in the next days I will commit it.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closing by commit 6e17420548

Thanks for reporting

Closing by commit 6e17420548 Thanks for reporting
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43788
No description provided.