BGE: Fix for T43788 Light casts shadow when use_shadow unchecked

Makes use_shadow usage consistent across supported lamp types (Spot and
Sun)

Differential D1148

Reviewers: Moguri, Brecht